[package]
name = "election"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
uuid = { version = "1.2", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
steganography = "*"
image = "0.21"
rand = "0.8"
serde = { version = "1.0.214", features = ["derive"]}
serde_derive = "1.0.214"
serde_json = "1.0.132"
sysinfo = "0.29.10"
serde_cbor = "0.11.2"
futures = "*"
md5 = "*"
lazy_static = "1.4"
mysql_async = { version = "0.34.2", features = ["native-tls"] }

[patch.crates-io]

