[package]
name = "rust-distributed-middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
uuid = { version = "1.2", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
steganography = "*"
image = "0.21"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
rand = "0.8"
show-image = "0.13.0"